[package]
name = "microcheby"
description = "Single variable function approximation using Chebyshev polynomials. Embedded friendly and no_std compatible."
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stuffmatic/microcheby"
readme = "README.md"
categories = ["mathematics", "no-std", "no-std::no-alloc", "science"]
keywords=["chebyshev", "approximation", "polynomial", "math", "embedded"]
exclude=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std"]
std = []